--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,11 @@ android {
 }
 
 dependencies {
+    def fragment_version = "1.4.1"
+    implementation "androidx.fragment:fragment:$fragment_version" // java
+    implementation "androidx.fragment:fragment-ktx:$fragment_version" // kotlin
+
+
     def camerax_version = "1.1.0-beta01"
     implementation "androidx.camera:camera-core:${camerax_version}"
     implementation "androidx.camera:camera-camera2:${camerax_version}"
