--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,7 @@ android {
 }
 
 dependencies {
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     def fragment_version = "1.4.1"
     implementation "androidx.fragment:fragment:$fragment_version" // java
     implementation "androidx.fragment:fragment-ktx:$fragment_version" // kotlin
@@ -53,4 +54,6 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    
+    implementation 'androidx.recyclerview:recyclerview:1.2.1'
 }
