--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,22 +30,33 @@ android {
     viewBinding {
         enabled true
     }
+    
     namespace 'com.example.bboxphotoapp'
+    
+    buildFeatures {
+        viewBinding true
+    }
 }
 
 dependencies {
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    implementation 'androidx.annotation:annotation:1.2.0'
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.1'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1'
+
+    // fragments
     def fragment_version = "1.4.1"
     implementation "androidx.fragment:fragment:$fragment_version" // java
-    implementation "androidx.fragment:fragment-ktx:$fragment_version" // kotlin
-
-
+    // uncomment for kotlin fragment
+    //implementation "androidx.fragment:fragment-ktx:$fragment_version"
+    
+    // CAMERAX
     def camerax_version = "1.1.0-beta01"
     implementation "androidx.camera:camera-core:${camerax_version}"
     implementation "androidx.camera:camera-camera2:${camerax_version}"
     implementation "androidx.camera:camera-lifecycle:${camerax_version}"
     implementation "androidx.camera:camera-video:${camerax_version}"
-
     implementation "androidx.camera:camera-view:${camerax_version}"
     implementation "androidx.camera:camera-extensions:${camerax_version}"
 
@@ -57,3 +68,5 @@ dependencies {
     
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
 }
+
+apply plugin: 'com.android.application'
